# aws-billing-automation

./: .gitignore  README.md  process.py  pyproject.toml  run.sh.sample
