[tool.poetry]
name = "aws-billing-automation"
version = "0.1.0"
description = ""
authors = ["AJ Jordan <alex@strugee.net>"]
license = "AGPL-3.0+"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
